app/assets/stylesheets/views/widgets/snapshot_navigator_widget.scss
@import "utils/variables";

.body-transparent{
    background-color: transparent;
}
@font-face {
    font-family: 'proxima-nova-regular';
    src: asset-url('proximanova-regular-webfont.eot');
    src: asset-url('proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
    asset-url('proximanova-regular-webfont.woff') format('woff'),
    asset-url('proximanova-regular-webfont.ttf') format('truetype'),
    asset-url('proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'proxima-nova-bold';
    src: asset-url('proximanova-semibold-webfont.eot');
    src: asset-url('proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'),
    asset-url('proximanova-semibold-webfont.woff') format('woff'),
    asset-url('proximanova-semibold-webfont.ttf') format('truetype'),
    asset-url('proximanova-semibold-webfont.svg#proxima_nova_rgbold') format('svg');
    font-weight: normal;
    font-style: normal;
}

/*///////////////////////////
// RECORDING - SNAPSHOT
///////////////////////////*/
body {
  margin: 0;
}
th {
    font-family: "proxima-nova-bold", "Open Sans", sans-serif;
    font-weight: normal;
}

#fullscreen #edit-recording-image {
  display: none;
}

#recording input {
    font-size: 16px;
}
#recording .has-snapshot{
    color: #428bca;
    font-family: "proxima-nova-bold";
    font-weight: bold;
}
#recording-tab .table-condensed > tbody > tr > td {
    padding: 0px;
}
#recording-tab .datepicker td {
    width: 25px;
    height: 25px;
}
#recording-tab.row{
  margin-right: 0px;
  margin-left: 0px;
}

#fullscreen:hover .play-options {
  opacity: 1;
}
.play-options{
  position: absolute;
  opacity: 0;
  top: 0;
  left: 50%;
  transition: all .2s linear;
  z-index: 10000000000;
  margin-left: -18px;
  margin-top: -5px;
}
.btn-live-player {
  float: left;
  padding: 5px 9px 9px 10px;
  background: rgba(0,0,0,0.7);
  font-size: 12px;
  color: #ffffff;
  border-radius: 50% !important;
  transition: all 1s linear;
  margin-right: 5px;
  cursor: pointer;

  .icon-font {
    margin-top: 2px;
  }
}
.btn-live-player:hover {
  background: #68a2d5;
}

@media (max-width: 480px) {
  #recording-tab .btn {
    padding: 9px 5px;
    font-size: 13px;
    width: 41px;
  }
}
#recording-tab .btn-padding {
    padding: 9px 14px;
}
#btnFRwd i, #btnFFwd i {
    font-size: 16px;
}
#btnRwd i, #btnFwd i {
    font-size: 13px;
}
#btnPlayRec {
    padding-top: 2px;
}
#recording-tab .table-condensed tbody {
    background-color:#fff;
    border: none;
}
#recording-tab thead {
    background-color: #f6f6f6;
    border: 1px solid #e5e5e5;
}
#imgPlayback {
    border: 1px solid #efefef;
}
.left-column {
  width: 100%;
  max-width: 906px;
  float: left;
  padding-left: 15px;
  padding-right: 15px;
  margin-bottom: 20px;
}

.right-column {
  float: left;
  width: 30%;
}

.datepicker table {
  width: 100%;
}

.datepicker table {
  width: 100%;
}


@media (min-width: 850px) {
    .left-column {
        width: 70%;
    }
    .right-column {
        width: 30%;
    }
}
@media (max-width: 780px) {
    .left-column {
        width: 558px;
        float: left;
        padding-left: 15px;
        padding-right: 15px;
        margin-bottom: 20px;
    }
    .right-column {
        float: left;
    }
}
@media (max-width: 480px) {
  .left-column {
    width: 100%;
    float: left;
    padding-left: 0px;
    padding-right: 0px;
    margin-bottom: 10px;
    max-width: none;
  }
  .right-column {
    float: left;
    padding-left: 0px;
    padding-right: 0px;
  }

  #recording-tab #calendar {
    display: none;
  }

}

.snapshots {
    position: relative;
    overflow:hidden;
    -webkit-user-select: none; /* Chrome/Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+ */

    /* Rules below not implemented in browsers yet */
    -o-user-select: none;
    user-select: none;
}
.snapshots i {
  cursor: pointer;
}
.tri-option {
    top:18px;
    right:15px;
    position: absolute;
    opacity: 1;
    cursor: pointer;
}
.menu-right.menu-open .tri-option {
    opacity: 0;
}

.top{top:0}

.right{right:0;}
.float-right {
    float: right;
}
ul li {
    padding-left: 0px;
    margin: 0;
    padding: 0;
}
.snapshot-menu-bar li i {
    margin: 24px auto;
    display:block;
}
.snapshot-menu-bar a:hover {
    text-decoration: none;
}
.snapshot-menu-bar {
    background: #428bca;
    position: fixed;
    width: 60px;
    height: 100%;
    top: 0;
    z-index: 1000;
    border:1px solid transparent;
    -webkit-transition: all 0.6s ease;
    -moz-transition: all 0.6s ease;
    transition: all 0.6s ease;
}
.snapshot-menu-bar-2 {
    background: #68A2D5;
}

ul, menu, dir {
    display: block;
    list-style-type: disc;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-start: 0px;
}
/* Vertical menu that slides from the left or right */

.menu-right {
    right: -60px;
    position: absolute;

}

.menu-right.menu-open {
    right: 0px;
}


.menu-right2 {
    right: -60px;
    position: absolute;

}

.menu-right2.menu-open {
    right: 0px;
}


@media screen and (max-height: 26.375em){

    .snapshot-menu-bar {
        font-size: 90%;
        width: 190px;
    }

    .menu-left,
    .menu-push-toleft {
        left: -190px;
    }

    .menu-right {
        right: -190px;
    }

    .menu-push-toright {
        left: 190px;
    }
}
.snapshots:hover .snapshot-sidebar {
    opacity: 1;
}

/*Start Recording tab stylesheet*/
.loader-bg{
    left: 2px;
    top: 2px;
    position: absolute;
    display: none;
    background: asset-url('trans-grey.png') 0px;
}
.playback-slider-outer{
    width:100%;
    height:1.12em;
    cursor:pointer;
    margin-top:2px;
    background:#8cbae3 repeat-x -2px 0px;
}
/* ... */

